# speed-runner

./: Cargo.toml  README.md  docker-compose.yml
configuration/: base.yml
prometheus/: prometheus.yml
src/: configuration.rs  lib.rs  main.rs  record.rs  speed_test.rs
