[package]
name = "speed-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "speed-runner"

[dependencies]
anyhow = "1"
config = "0.13"
prometheus = { version = "0.13.3", features = ["push"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
